밀린 업로드 끝

--- a/_posts/Algo/백준/2022-12-27-13일의금요일.md
+++ b/_posts/Algo/백준/2022-12-27-13일의금요일.md
@@ -12,12 +12,10 @@ pin: false
  - 매주 금요일이 13일인지 확인해보도록 구현 -> 너무 비효율적
  - 반대로 매달 13일이 금요일인지 확인해보기
  - 1일이 화요일이므로 4일은 금요일이다 & 이번달 13일부터 다음달 13일까지 걸리는 일 수는 현재 일 수 + 이번 달의 총 일 수이다.
- - 윤년마다 2월의 마지막 날을 29일로 처리해주기 -> 윤년 조건은 year % 400 == 0 || (year % 100 != 0 && year %4 == 0)
+ - 윤년마다 2월의 마지막 날을 29일로 처리해주기
  - 시간 복잡도는 O(12N) 정도이다.
 
 # 해결
-
- - 내용
 
 ```java
 import java.io.BufferedReader;
