--- a/_posts/Algo/백준/2022-12-29-KCPC.md
+++ b/_posts/Algo/백준/2022-12-29-KCPC.md
@@ -13,7 +13,7 @@ pin: false
  - 2차원 배열에 점수를 저장한다 -> 이때 저장되어있는 값과 새로 문제를 풀어 얻게 된 값중 큰 값을 저장한다.
  - 모든 로그를 확인한 후 각 문제의 최대 점수를 더해 팀별로 저장한다.
  - Team 클래스 생성 -> id, 점수 총합, 푼 횟수, 마지막으로 풀은 순서를 Team에 담아 배열로 만든다 -> Team 배열 정렬(Team 클래스에 impleaments 한 Comparable 조건에 따라 정렬된다)
- - 시간 복잡도는 O(MK)이다.
+ - 시간 복잡도는 O(MK+N^2)이다.
 
 # 해결
 
