스프링 핵심 원리 이해1 섹션2

--- a/_posts/양식/2023-@-@-강의정리용.md
+++ b/_posts/양식/2023-@-@-강의정리용.md
@@ -1,17 +1,19 @@
 ---
 title: title
 author: jimin
-date: 2022-@-@ 00:00:00 +0900
-categories: [Java, 자료구조]
+date: 2023-@-@ 00:00:00 +0900
+categories: [강의, ]
 tags: []
 pin: false
 ---
 
-# 자료구조 이란?
+# 제목
 
  - 내용
 
-# 자료구조 특징
+# 해결
+
+ - 내용
 
 ```java
 import java.io.*;
@@ -19,8 +21,6 @@ import java.lang.reflect.Array;
 import java.util.*;
 ```
 
-# 자료구조 종류
-
-# 참고 사이트
+# 참고
 
  - 직접구현
