--- a/_posts/양식/2023-@-@-개발공용.md
+++ b/_posts/양식/2023-@-@-개발공용.md
@@ -1,9 +1,9 @@
 ---
 title: title
 author: jimin
-date: 2022-@-@ 00:00:00 +0900
-categories: [Spring, Test]
-tags: [Test,RestDocs,RestAPI]
+date: 2023-@-@ 00:00:00 +0900
+categories: [Java,개발]
+tags: []
 pin: false
 ---
 
@@ -20,4 +20,3 @@ import java.util.*;
 
 # 참고
 
- - 직접구현
