--- a/_posts/Tutorial/2022-11-23-작성-양식1.md
+++ b/_posts/Tutorial/2022-11-23-작성-양식1.md
@@ -13,7 +13,7 @@ render_with_liquid: false
 ## 강조, 하이퍼링크 작성 방법
 
 `디렉토리 주소 적을때 사용하는 폰트(강조용)`{: .filepath}, [`하이퍼링크 작성`](https://github.com/jiminsong490/jiminsong490.github.io)
-, `형광팬 역할`, **Bold**, ['특정 제목으로 이동'](#이동용_제목)
+, `형광팬 역할`, **Bold**, ['특정 제목으로 이동'](#이동용_제목), <span style="color:red">빨간 글씨</span>
 
 ## 팁,_주의사항_작성_방법
 
