--- a/_posts/양식/2023-@-@-백준용.md
+++ b/_posts/양식/2023-@-@-백준용.md
@@ -1,8 +1,8 @@
 ---
-title: 프로그래머스(제목)
+title: title
 author: jimin
-date: 2022-@-@ 00:00:00 +0900
-categories: [Algo, 프로그래머스]
+date: 2023-@-@ 00:00:00 +0900
+categories: [Algo, 백준]
 tags: []
 pin: false
 ---
