--- a/_posts/강의/스프링핵심원리_기본편/2023-01-01-스프링핵심원리이해1-예제만들기.md
+++ b/_posts/강의/스프링핵심원리_기본편/2023-01-01-스프링핵심원리이해1-예제만들기.md
@@ -1,5 +1,5 @@
 ---
-title: title
+title: 섹션2. 스프링 핵심 원리 이해1 - 예제 만들기
 author: jimin
 date: 2023-01-01 00:00:00 +0900
 categories: [강의, 스프링핵심원리-기본편]
