백준 : 이중 우선순위 큐

--- a/_posts/Algo/백준/2023-02-17-세수의합.md
+++ b/_posts/Algo/백준/2023-02-17-세수의합.md
@@ -16,8 +16,8 @@ pin: false
 
  - x+y+z = k일때 k를 만들 수 있는 경우의 수는 N^3
  - x+y+z = k를 x+y = k-z로 바꾼다면 N^2으로 구현할 수 있음
- - 추가로 x+y의 값이 저장되어 있는 배열에서 k-z값을 찾으려면 이분탐색을 사용해야 함 -> 완전탐색응로 찾으려면 시간초과
- - 시간복잡도는 x+y의 경우의 수 + 이분탐색 -> O(N^2 (log N)^2)
+ - 추가로 x+y의 값이 저장되어 있는 배열에서 k-z값을 찾으려면 이분탐색을 사용해야 함 -> 완전탐색으로 찾으려면 시간초과
+ - 시간복잡도는 x+y의 경우의 수 * 이분탐색 -> O(N^2 (log N)^2)
 
 ```java
 import java.io.BufferedReader;
