--- a/_posts/Algo/백준/2023-02-19-트리의지름.md
+++ b/_posts/Algo/백준/2023-02-19-트리의지름.md
@@ -14,7 +14,7 @@ pin: false
  - 모든 노드를 순회하면서 각 노드에서 가장 긴 길이를 찾아 max값과 비교
  - 시간복잡도는 모든 노드 순회 * dfs(최악의 경우 모든 노드 탐색) -> O(N^2)
  - 시간 제한이 2초라 아슬아슬하게 통과
- - O(N^2)보다 효율적인 코드를 찾아보니 트리의 지름을 구할 때 bfs 2번이면 찾을 수 있다는 것을 알게 됨 -> O(2N)으로 해결 가능할 듯
+ - O(N^2)보다 효율적인 코드를 찾아보니 트리의 지름을 구할 때 bfs 2번이면 찾을 수 있다는 것을 알게 됨 -> 2N으로 해결 가능할 듯
 
 
 # 해결
