--- a/_posts/nGrinder/2023-06-09-nGrinder.md
+++ b/_posts/nGrinder/2023-06-09-nGrinder.md
@@ -2,7 +2,7 @@
 title: 도커로 nGrinder 사용하기
 author: jimin
 date: 2023-06-09 00:00:00 +0900
-categories: [Docker, nGrinder]
+categories: [nGrinder]
 tags: []
 pin: false
 ---
@@ -10,7 +10,8 @@ pin: false
 # nGrinder란?
 
 #### 네이버에서 진행한 오픈 소스 프로젝트로 서버의 부하 테스트를 위한 도구
- !["nGrinder_Architecture"](/assets/img/postpic/nGrinder/nGrinder_Architecture.png)
+
+!["nGrinder_Architecture"](/assets/img/postpic/nGrinder/nGrinder_Architecture.png)
  - 스크립트를 통한 **시나리오 기반 테스트**
  - 부하 테스트 : 시스템의 응답 성능과 한계치를 파악하기 위한 테스트
     - 부하 테스트 도구 : nGrinder, k6, Apache JMeter, Gatling, Locust 등
@@ -80,11 +81,11 @@ services:
 # 발생 오류
 * #### script 생성 후 validate 시 항상 실패
 !["validate 실패"](/assets/img/postpic/nGrinder/validate%20error.png)
- * 원인 : controller와 agent의 버전 문제, 도커로 사용한다면 3.5.6부터 latest까지는 피할 것
+ - 원인 : controller와 agent의 버전 문제, 도커로 사용한다면 3.5.6부터 latest까지는 피할 것
 
-* #### validate 시 백엔드 서버 연결 실패
+- #### validate 시 백엔드 서버 연결 실패
 !["백엔드 연결 실패"](/assets/img/postpic/nGrinder/%EB%B0%B1%EC%97%94%EB%93%9C%20%EC%97%B0%EA%B2%B0%20error.png)
- * 원인 : 127.0.0.1:8080으로 연결 시도, agent 컨테이너에서 backend 컨테이너로 접속하기 위해서는 도커 내부 IP로 접속해야함 -> compose에서 네트워크 설정을 통해 backend의 IP 주소를 설정하고 그 IP로 요청
+- 원인 : 127.0.0.1:8080으로 연결 시도, agent 컨테이너에서 backend 컨테이너로 접속하기 위해서는 도커 내부 IP로 접속해야함 -> compose에서 네트워크 설정을 통해 backend의 IP 주소를 설정하고 그 IP로 요청
 
 # 해결
 * #### 테스트 성공 확인
@@ -168,7 +169,7 @@ class TestRunner {
 
 ```
 
-* #### docker-compose.yml
+* ### docker-compose.yml
 
 ```yml
 version: "3"
