--- a/_posts/nGrinder/2023-06-09-nGrinder.md
+++ b/_posts/nGrinder/2023-06-09-nGrinder.md
@@ -94,7 +94,7 @@ services:
 ### performance test 결과
 !["부하 테스트 성공"](/assets/img/postpic/nGrinder/%EB%B6%80%ED%95%98%20%ED%85%8C%EC%8A%A4%ED%8A%B8%20%EC%84%B1%EA%B3%B5.png)
 
-* #### script.groovy
+### script.groovy
 
 ```groovy
 import static net.grinder.script.Grinder.grinder
@@ -169,8 +169,7 @@ class TestRunner {
 
 ```
 
-* ### docker-compose.yml
-
+### docker-compose.yml
 ```yml
 version: "3"
 services:
