--- a/_posts/nGrinder/2023-06-09-nGrinder1.md
+++ b/_posts/nGrinder/2023-06-09-nGrinder1.md
@@ -1,8 +1,8 @@
 ---
-title: 도커로 nGrinder 사용하기
+title: 도커로 nGrinder 설치하기
 author: jimin
 date: 2023-06-09 00:00:00 +0900
-categories: [nGrinder]
+categories: [부하 테스트 ,nGrinder]
 tags: []
 pin: false
 ---
@@ -85,7 +85,8 @@ services:
 
 - #### validate 시 백엔드 서버 연결 실패
 !["백엔드 연결 실패"](/assets/img/postpic/nGrinder/%EB%B0%B1%EC%97%94%EB%93%9C%20%EC%97%B0%EA%B2%B0%20error.png)
-- 원인 : 127.0.0.1:8080으로 연결 시도, agent 컨테이너에서 backend 컨테이너로 접속하기 위해서는 도커 내부 IP로 접속해야함 -> compose에서 네트워크 설정을 통해 backend의 IP 주소를 설정하고 그 IP로 요청
+- 원인 : 127.0.0.1:8080으로 연결 시도, agent 컨테이너에서 backend 컨테이너로 접속하기 위해서는 도커 내부 IP로 접속해야함 
+  → compose에서 네트워크 설정을 통해 backend의 IP 주소를 설정하고 그 IP로 요청
 
 # 해결
 * #### 테스트 성공 확인
@@ -234,9 +235,7 @@ networks: # 도커 내부 네트워크 설정
 ```
 
 # 다음
-* 도커를 이용해 부하 테스트 하는 것에 성공했으니 본격적으로 테스트를 진행
 * 부하 테스트 전 알아야 할 것들에 대해 정리
-* 성능 목표 설정
 
 # 참고
  - [https://velog.io/@max9106/nGrinderPinpoint-test1](https://velog.io/@max9106/nGrinderPinpoint-test1)
