feat : restdocs + swagger

--- a/_posts/Spring/Test/2022-12-11-Swagger.md
+++ b/_posts/Spring/Test/2022-12-11-Swagger.md
@@ -2,7 +2,7 @@
 title: Swagger
 author: jimin
 date: 2022-12-11 00:00:00 +0900
-categories: [Spring, Test]
+categories: [Spring, API 명세서]
 tags: [Test,Swagger,RestAPI]
 pin: false
 ---
@@ -14,7 +14,7 @@ pin: false
  - 매번 API를 사용, 수정할 때마다 노션에 들어가서 명세서를 확인, 수정하는 것은 매우 번거로운 일이다. 그렇다고 부지런히 관리해주지 않으면 오류를 일으킨다. 이런 문제들을 해결할 수 있는 것이 Swagger다.
 
 # Swagger 
-> 1. Build 할 때마다 자동으로 API 명세서를 만들어준다.
+> 1. 실행 시 컨트롤러에 명시된 어노테이션을 스캔을 통해 자동으로 API 명세서를 만들어준다.
 > 2. 단순히 명세만 하는 것이 아닌 테스트가 가능하다. -> postman 역할 가능
 > 3. 컨트롤러에 Swagger 어노테이션이 많음 -> 가독성이 안좋아짐
 > 4. 쉽다. RestDocs에 비해 시간이 적게 걸림
