--- a/_posts/Spring/Test/2022-12-10-RestDocs.md
+++ b/_posts/Spring/Test/2022-12-10-RestDocs.md
@@ -2,7 +2,7 @@
 title: RestDocs
 author: jimin
 date: 2022-12-10 00:00:00 +0900
-categories: [Spring, Test]
+categories: [Spring, API 명세서]
 tags: [Test,RestDocs,RestAPI]
 pin: false
 ---
